2008-07-01  Rodrigo Kumpera  <rkumpera@novell.com>

	* SqlDataReader.cs (GetSchemaTable): Calculate column indexes
	outside of the row loop.

2008-07-01  Marek Habersack  <mhabersack@novell.com>

	* SqlDataReader.cs: use named properties in TdsDataColumn for the
        2.0 profile.

2008-06-30  Zoltan Varga  <vargaz@gmail.com>

	* SqlDataReader.cs: Allocate 'schemaTable' lazily. 
	(GetSchemaValue): Avoid some hash table lookups

2008-06-27  Zoltan Varga  <vargaz@gmail.com>

	* SqlDataReader.cs (ConstructSchemaTable): Avoid unneccessary reflection calls.

2008-06-23  Veerapuram Varadhan  <vvaradhan@novell.com>

	* SqlDependency.cs: New
	
2008-06-12  Veerapuram Varadhan  <vvaradhan@novell.com>
	
	Patch by Christian Hergert <christian.hergert@gmail.com>
	* SqlConnection.cs (Open): Do not reset the connection as it is already 
	done in the TdsConnectionPool itself.
	
2008-06-12  Marek Habersack  <mhabersack@novell.com>

	* SqlParameterCollection.cs: this [int] must check the range and
	throw an exception if necessary.
	
	* SqlCommand.cs: throw IOEX when stored procedure is not found in
	DeriveParameters. All procedures in MS SQL will report at least
	one parameter - the return value.

2008-06-10  Veerapuram Varadhan  <vvaradhan@novell.com>
	
	* SqlConnection.cs: TdsConnectionPool.GetConnectionPool() now returns 
	IDictionary<TKey, TValue>. 
	
2008-06-09  Ankit Jain  <jankit@novell.com>

	* SqlCommand.cs: Use Tds instead of ITds now.
	* SqlConnection.cs:  Likewise.

2008-05-27  Gert Driesen  <drieseng@users.sourceforge.net>

	* SqlConnection.cs: Added support for '.' as alias for localhost.
	Improve exception message when TCP/IP protocol is not enabled.

2008-05-17  Gert Driesen  <drieseng@users.sourceforge.net>

	* SqlDataReader.cs (GetInt64): Removed workaround for TDS 7.0 handling
	of bigint column type as this is handled in Mono.Data.Tds.

2008-05-14  Marek Habersack  <mhabersack@novell.com>

	* SqlConnection.cs: added support for USER INSTANCE keyword in the